--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0"
   },
@@ -32,8 +32,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "css-loader": "^6.10.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
+    "style-loader": "^3.3.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
